--- a/hybris/config/local.properties
+++ b/hybris/config/local.properties
@@ -56,10 +56,10 @@ website.matrix.https=https://matrix.local:9092/store
 
 
 # connection
-db.url=jdbc:mysql://localhost:3314/hybrisoms?useConfigs=maxPerformance&characterEncoding=utf8
-db.driver=com.mysql.jdbc.Driver
-db.username=root
-db.password=xGE3byeGtV
+#db.url=jdbc:mysql://localhost:3314/hybrisoms?useConfigs=maxPerformance&characterEncoding=utf8
+#db.driver=com.mysql.jdbc.Driver
+#db.username=root
+#db.password=xGE3byeGtV
 
 
 
@@ -67,15 +67,15 @@ db.password=xGE3byeGtV
 db.tableprefix=
 
 # other *mandatory* settings
-db.customsessionsql=SET SESSION TRANSACTION ISOLATION LEVEL READ COMMITTED;
-mysql.optional.tabledefs=CHARSET=utf8 COLLATE=utf8_bin
-mysql.tabletype=InnoDB
+#db.customsessionsql=SET SESSION TRANSACTION ISOLATION LEVEL READ COMMITTED;
+#mysql.optional.tabledefs=CHARSET=utf8 COLLATE=utf8_bin
+#mysql.tabletype=InnoDB
 
 # MySQL DATETIME handling
 #   from MySQL 5.6.4 -> mysql.allow.fractional.seconds=true
 #   before MySQL 5.6.4 -> mysql.allow.fractional.seconds=false (or omit the property)
 #
-mysql.allow.fractional.seconds=true
+#mysql.allow.fractional.seconds=true
 #
 # Note: after changing this property you must re-run initialization / update because
 # is only has a effect if the initialization / update DDL statements are re-generated!
